Fixed styling error on mobile

--- a/src/assets/css/hours/hours.css
+++ b/src/assets/css/hours/hours.css
@@ -47,10 +47,10 @@
   }
 
   .hour-cnt h6 {
-    font-size: 0.85rem;
+    font-size: 0.78rem;
   }
 
   .hour-cnt i {
-    font-size: 0.8rem;
+    font-size: 0.75rem;
   }
 }
